--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,11 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
+      with:
+        submodules: true
+
+    - name: Update submodules
+      run: git submodule update --init --recursive
 
     - name: Setup Node.js
       uses: actions/setup-node@v3
