--- a/.github/workflows/on-notes-update.yml
+++ b/.github/workflows/on-notes-update.yml
@@ -1,9 +1,36 @@
-name: Deploy when notes are updated
+name: Deploy Eleventy when notes are updated
 
 on:
   repository_dispatch:
     types: [notes-updated]
 
 jobs:
-  build-and-deploy:
-    uses: ./.github/workflows/deploy.yml
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+        with:
+          submodules: true
+
+      - name: Update submodules
+        run: git submodule update --init --recursive
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 22
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build Eleventy site
+        run: npm run build
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./_site
+          cname: jardin.ludique.dev
