--- a/.github/workflows/on-notes-update.yml
+++ b/.github/workflows/on-notes-update.yml
@@ -14,8 +14,8 @@ jobs:
         with:
           submodules: true
 
-      - name: Update submodules
-        run: git submodule update --init --recursive
+      - name: Clone notes repo
+        run: git clone https://github.com/theopaolo/notes.git notes
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
