--- a/.github/workflows/on-notes-update.yml
+++ b/.github/workflows/on-notes-update.yml
@@ -15,7 +15,7 @@ jobs:
           submodules: true
 
       - name: Clone notes repo
-        run: git clone https://github.com/theopaolo/notes.git notes
+        run: git clone https://github.com/theopaolo/notes.git src/notes
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
